# Soundux

./: .all-contributorsrc  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  RunGuard.cpp  Soundboard  Soundboard.pro  Soundux.pro  clickablesliderstyle.h  cmake_install.cmake  customkeysequenceedit.cpp  customkeysequenceedit.h  io.github.Soundux.yml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qpm.json  qsoundslist.cpp  qsoundslist.h  resources.qrc  searchview.cpp  searchview.h  sethotkeydialog.cpp  sethotkeydialog.h  settings.cpp  settings.h  settingstab.cpp  settingstab.h  settingstabgeneral.cpp  settingstabgeneral.h  soundlistwidgetitem.cpp  soundlistwidgetitem.h  (+2 more)
.github/: CONTRIBUTING.md  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: build_flatpak.yml  codeql-analysis-python.yml  codeql-analysis.yml  compile_linux.yml  compile_windows.yml  linux_debug.yml  release.yml  release_windows.yml  upload_binaries_to_draft.yml  upload_full_src.yml  windows_debug.yml
Soundboard_autogen/: moc_predefs.h
assets/: icon.rc
assets/flatpak/: io.github.Soundux.metainfo.xml
deployment/: soundux.desktop
deployment/appstream/: io.github.Soundux.desktop  io.github.Soundux.metainfo.xml
deployment/debian/soundux/DEBIAN/: changelog  control  rules
deployment/ebuild/: soundux.ebuild
deployment/flatpak/: io.github.Soundux.desktop  io.github.Soundux.metainfo.xml  io.github.Soundux.yml
deployment/innosetup/: Soundux.iss
deployment/rpm/: soundux.spec
docs/: README.md  _config.yml
flatpak/: io.github.Soundux.metainfo.xml
i18n/: LISEZMOI.md  ПРОЧТИМЕНЯ.md
lib/: generateMaterialDesignJs.py
src/: IconButton.qml  MaterialDesign.js  MaterialDesignIcon.qml  Soundux.iss  core.cpp  core.h  main.cpp  main.qml  qml.qrc  soundux.desktop
src/bindings/: bindings.cpp  bindings.h
src/config/: config.h
src/core/: core.cpp  core.h
src/core/config/: config.cpp  config.hpp
src/core/enums/: enums.hpp
src/core/global/: globals.hpp  objects.cpp  objects.hpp
src/core/hotkeys/: hotkeys.cpp  hotkeys.hpp  input.hpp  keys.cpp  keys.hpp
src/core/hotkeys/linux/: libinput.cpp  x11.cpp  x11.hpp
src/core/hotkeys/windows/: windows.cpp  windows.hpp
src/core/objects/: data.cpp  data.hpp  objects.hpp  settings.hpp  sound.cpp  sound.hpp
src/helper/audio/: audio.cpp  audio.hpp
src/helper/audio/device/: device.cpp  device.hpp
src/helper/audio/linux/: backend.cpp  backend.hpp  linux.cpp  pulse.cpp  pulse.hpp
src/helper/audio/linux/pipewire/: forward.cpp  forward.hpp  pipewire.cpp  pipewire.hpp
src/helper/audio/linux/pulse/: forward.cpp  forward.hpp  pulse.cpp  pulse.hpp
src/helper/audio/linux/pulseaudio/: forward.cpp  forward.hpp  pulseaudio.cpp  pulseaudio.hpp
src/helper/audio/sound/: sound.cpp  sound.hpp
src/helper/audio/windows/: winsound.cpp  winsound.hpp
src/helper/base64/: base64.cpp  base64.hpp
src/helper/cli/: cli.cpp  cli.hpp
src/helper/events/: eventhandler.hpp
src/helper/exceptions/: crashhandler.cpp  crashhandler.hpp
src/helper/exceptions/linux/: linux.cpp
src/helper/exceptions/windows/: windows.cpp
src/helper/icons/: forward.cpp  forward.hpp  icons.cpp  icons.hpp
src/helper/json/: bindings.hpp  serializer.hpp
src/helper/misc/: misc.cpp  misc.hpp
src/helper/network/: server.cpp  server.hpp  tcplistener.cpp  tcplistener.hpp  tcpsocket.cpp  tcpsocket.hpp
src/helper/protocol/: packethandler.cpp  packethandler.hpp  packets.cpp  packets.hpp
src/helper/queue/: queue.cpp  queue.hpp
src/helper/rest/: client.cpp  client.hpp  server.cpp  server.hpp
src/helper/systeminfo/: systeminfo.cpp  systeminfo.hpp
src/helper/systeminfo/linux/: linux-info.cpp
src/helper/systeminfo/windows/: windows-info.cpp
src/helper/threads/: processing.hpp
src/helper/version/: check.cpp  check.hpp
src/helper/ytdl/: youtube-dl.cpp  youtube-dl.hpp
src/hotkeys/: global.cpp  global.h  linux.h  windows.h
src/innosetup/: Soundux.iss
src/playback/: global.h  impl.cpp  linux.h  windows.h
src/qml/: main.qml  qml.qrc
src/qml/components/: IconButton.qml  MaterialDesignIcon.qml
src/runguard/: runguard.h
src/ui/: ui.cpp  ui.hpp
src/ui/impl/webview/: webview.cpp  webview.hpp
